--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -14,16 +14,16 @@
   justify-content: center;
   color: white;
   width: 50%;
-  height: 50%;
+  height: 80%;
 }
 .title {
-  font-size: 50px;
+  font-size: 200%;
   font-weight: bold;
   margin-bottom: 10px;
 }
 .header-search {
-  width: 50%;
-  height: 40px;
+  width: 70%;
+  height: 20%;
   padding-left: 10px;
   border: none;
   outline: none;
